Remove unused constants and update deprecated methods